@@ -4,6 +4,9 @@
 /**
  * To be Annouced - version 1.1.3
  */
+1. Translable searchbutton & Loading translations
+2. Sanitizing Values in customizer
+3. changing functions prefix from 'purecss' to 'simply_pure'
 
 
 /**
